Changed dataset model to simplify metadata and protection management